# rag101

./: README.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
db/: init.sql
helpers/: database.py
