[project]
name = "rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.5",
    "langchain>=0.3.27",
    "ollama>=0.5.4",
    "psycopg2>=2.9.10",
    "sentence-transformers>=5.1.1",
    "transformers>=4.56.2",
]
