[project]
name = "rag-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "lab>=8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "ollama>=0.5.4",
    "psycopg>=3.2.10",
    "pypdf>=6.1.0",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.1.1",
    "tiktoken>=0.11.0",
    "transformers>=4.56.2",
]
